infrastructure/platform/tpi-1/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gw
  namespace: infrastructure
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      service.cilium.io/type: LoadBalancer
      service.cilium.io/forwarding-mode: dsr
      # kube-vip.io/ignore: "true"
      lbipam.cilium.io/ips: "${internal_gw_lb_ip}"
      external-dns.alpha.kubernetes.io/hostname: gw.tpi-1.${domain_absolutist_it:=absolutist.it},gw.tpi-1.${domain_wahoo_li:=wahoo.li}
  listeners:
  - name: internal-wahooli-http
    protocol: HTTP
    port: 80
    hostname: "*.${domain_wahoo_li:=wahoo.li}"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            internal-services: "true"
  - name: internal-wahooli-https
    protocol: HTTPS
    port: 443
    hostname: "*.${domain_wahoo_li:=wahoo.li}"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wahooli-wildcard-tls
        kind: Secret
  - name: internal-absolutistit-http
    protocol: HTTP
    port: 80
    hostname: "*.${domain_absolutist_it:=absolutist.it}"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            internal-services: "true"
  - name: internal-absolutistit-https
    protocol: HTTPS
    port: 443
    hostname: "*.${domain_absolutist_it:=absolutist.it}"
    tls:
      mode: Terminate
      certificateRefs:
      - name: absolutistit-wildcard-tls
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            internal-services: "true"
